// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Goodreads Widget matches the loading state snapshot 1`] = `
<DocumentFragment>
  <section
    class="css-1pk2a5b"
    id="goodreads"
  >
    <header
      class="css-zvwfan"
    >
      <div
        class="css-x7xacr"
      >
        <h2
          class="css-16f4ihe"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-goodreads css-1f4q58s"
            data-icon="goodreads"
            data-prefix="fab"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M299.9 191.2c5.1 37.3-4.7 79-35.9 100.7-22.3 15.5-52.8 14.1-70.8 5.7-37.1-17.3-49.5-58.6-46.8-97.2 4.3-60.9 40.9-87.9 75.3-87.5 46.9-.2 71.8 31.8 78.2 78.3zM448 88l0 336c0 30.9-25.1 56-56 56L56 480c-30.9 0-56-25.1-56-56L0 88C0 57.1 25.1 32 56 32l336 0c30.9 0 56 25.1 56 56zM330 313.2s-.1-34-.1-217.3l-29 0 0 40.3c-.8 .3-1.2-.5-1.6-1.2-9.6-20.7-35.9-46.3-76-46-51.9 .4-87.2 31.2-100.6 77.8-4.3 14.9-5.8 30.1-5.5 45.6 1.7 77.9 45.1 117.8 112.4 115.2 28.9-1.1 54.5-17 69-45.2 .5-1 1.1-1.9 1.7-2.9 .2 .1 .4 .1 .6 .2 .3 3.8 .2 30.7 .1 34.5-.2 14.8-2 29.5-7.2 43.5-7.8 21-22.3 34.7-44.5 39.5-17.8 3.9-35.6 3.8-53.2-1.2-21.5-6.1-36.5-19-41.1-41.8-.3-1.6-1.3-1.3-2.3-1.3l-26.8 0c.8 10.6 3.2 20.3 8.5 29.2 24.2 40.5 82.7 48.5 128.2 37.4 49.9-12.3 67.3-54.9 67.4-106.3z"
              fill="currentColor"
            />
          </svg>
          Goodreads
        </h2>
        <svg
          class="svg-loaders-svg css-ao632c"
          fill="#1E90FF"
          height="24"
          viewBox="0 0 135 140"
          width="24"
        >
          <rect
            height="120"
            rx="6"
            width="15"
            y="10"
          >
            <animate
              attributeName="height"
              begin="0.5s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="120;110;100;90;80;70;60;50;40;140;120"
            />
            <animate
              attributeName="y"
              begin="0.5s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="10;15;20;25;30;35;40;45;50;0;10"
            />
          </rect>
          <rect
            height="120"
            rx="6"
            width="15"
            x="30"
            y="10"
          >
            <animate
              attributeName="height"
              begin="0.25s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="120;110;100;90;80;70;60;50;40;140;120"
            />
            <animate
              attributeName="y"
              begin="0.25s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="10;15;20;25;30;35;40;45;50;0;10"
            />
          </rect>
          <rect
            height="140"
            rx="6"
            width="15"
            x="60"
          >
            <animate
              attributeName="height"
              begin="0s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="120;110;100;90;80;70;60;50;40;140;120"
            />
            <animate
              attributeName="y"
              begin="0s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="10;15;20;25;30;35;40;45;50;0;10"
            />
          </rect>
          <rect
            height="120"
            rx="6"
            width="15"
            x="90"
            y="10"
          >
            <animate
              attributeName="height"
              begin="0.25s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="120;110;100;90;80;70;60;50;40;140;120"
            />
            <animate
              attributeName="y"
              begin="0.25s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="10;15;20;25;30;35;40;45;50;0;10"
            />
          </rect>
          <rect
            height="120"
            rx="6"
            width="15"
            x="120"
            y="10"
          >
            <animate
              attributeName="height"
              begin="0.5s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="120;110;100;90;80;70;60;50;40;140;120"
            />
            <animate
              attributeName="y"
              begin="0.5s"
              calcMode="linear"
              dur="1s"
              repeatCount="indefinite"
              values="10;15;20;25;30;35;40;45;50;0;10"
            />
          </rect>
        </svg>
      </div>
      <div
        class="css-iydney"
      >
        <div
          class="css-6ad07s"
        >
          <div
            class="css-1njnxko"
          >
             
          </div>
          <div
            class="css-137c6l"
          >
             
          </div>
        </div>
      </div>
    </header>
    <div
      data-testid="recently-read-books"
    >
      Loading...
    </div>
    <div
      data-testid="user-status"
    >
      Loading...
    </div>
    <div
      aria-hidden="true"
      class="css-i0j38v"
    >
      <div
        class="css-1rzhlu5"
      >
        <div
          class="css-187niig"
        >
          <div
            class="css-10qk8di"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-robot css-vepx1b"
              data-icon="robot"
              data-prefix="fas"
              role="img"
              viewBox="0 0 640 512"
            >
              <path
                d="M352 0c0-17.7-14.3-32-32-32S288-17.7 288 0l0 64-96 0c-53 0-96 43-96 96l0 224c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-224c0-53-43-96-96-96l-96 0 0-64zM160 368c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zm120 0c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zm120 0c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zM224 176a48 48 0 1 1 0 96 48 48 0 1 1 0-96zm144 48a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zM64 224c0-17.7-14.3-32-32-32S0 206.3 0 224l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32l0-96zm544-32c-17.7 0-32 14.3-32 32l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32l0-96c0-17.7-14.3-32-32-32z"
                fill="currentColor"
              />
            </svg>
            <h3
              class="css-1njovxx"
            >
              AI Summary
            </h3>
          </div>
          <div
            class="show-loading-animation css-is6wc5"
          >
            <div
              class="text-block"
              style="width: 100%;"
            >
              <div
                class="text-row"
                style="max-height: 11.11111111111111%; width: 97%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0px;"
              />
              <div
                class="text-row"
                style="max-height: 11.11111111111111%; width: 100%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0.7em;"
              />
              <div
                class="text-row"
                style="max-height: 11.11111111111111%; width: 94%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0.7em;"
              />
              <div
                class="text-row"
                style="max-height: 11.11111111111111%; width: 90%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0.7em;"
              />
              <div
                class="text-row"
                style="max-height: 11.11111111111111%; width: 98%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0.7em;"
              />
            </div>
          </div>
        </div>
        <div
          class="css-12pe7f2"
        >
          <div
            aria-hidden="true"
            class="css-2d54d9"
          />
        </div>
      </div>
      <p
        class="css-1uvvt1t"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-robot css-fk20h4"
          data-icon="robot"
          data-prefix="fas"
          role="img"
          viewBox="0 0 640 512"
        >
          <path
            d="M352 0c0-17.7-14.3-32-32-32S288-17.7 288 0l0 64-96 0c-53 0-96 43-96 96l0 224c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-224c0-53-43-96-96-96l-96 0 0-64zM160 368c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zm120 0c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zm120 0c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zM224 176a48 48 0 1 1 0 96 48 48 0 1 1 0-96zm144 48a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zM64 224c0-17.7-14.3-32-32-32S0 206.3 0 224l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32l0-96zm544-32c-17.7 0-32 14.3-32 32l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32l0-96c0-17.7-14.3-32-32-32z"
            fill="currentColor"
          />
        </svg>
        Generated by Gemini (AI)
      </p>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Goodreads Widget renders error state 1`] = `
<DocumentFragment>
  <section
    class="css-1k28k4o"
    id="goodreads"
  >
    <div
      class="css-rmw57n"
    >
      <div
        class="css-59lkxq"
      >
        <h4>
          Something went wrong
        </h4>
        <p>
          Failed to load this widget.
        </p>
      </div>
      <div
        class="css-bgces8"
      />
    </div>
    <header
      class="css-f8y2ki"
    >
      <div
        class="css-x7xacr"
      >
        <h2
          class="css-16f4ihe"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-goodreads css-1f4q58s"
            data-icon="goodreads"
            data-prefix="fab"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M299.9 191.2c5.1 37.3-4.7 79-35.9 100.7-22.3 15.5-52.8 14.1-70.8 5.7-37.1-17.3-49.5-58.6-46.8-97.2 4.3-60.9 40.9-87.9 75.3-87.5 46.9-.2 71.8 31.8 78.2 78.3zM448 88l0 336c0 30.9-25.1 56-56 56L56 480c-30.9 0-56-25.1-56-56L0 88C0 57.1 25.1 32 56 32l336 0c30.9 0 56 25.1 56 56zM330 313.2s-.1-34-.1-217.3l-29 0 0 40.3c-.8 .3-1.2-.5-1.6-1.2-9.6-20.7-35.9-46.3-76-46-51.9 .4-87.2 31.2-100.6 77.8-4.3 14.9-5.8 30.1-5.5 45.6 1.7 77.9 45.1 117.8 112.4 115.2 28.9-1.1 54.5-17 69-45.2 .5-1 1.1-1.9 1.7-2.9 .2 .1 .4 .1 .6 .2 .3 3.8 .2 30.7 .1 34.5-.2 14.8-2 29.5-7.2 43.5-7.8 21-22.3 34.7-44.5 39.5-17.8 3.9-35.6 3.8-53.2-1.2-21.5-6.1-36.5-19-41.1-41.8-.3-1.6-1.3-1.3-2.3-1.3l-26.8 0c.8 10.6 3.2 20.3 8.5 29.2 24.2 40.5 82.7 48.5 128.2 37.4 49.9-12.3 67.3-54.9 67.4-106.3z"
              fill="currentColor"
            />
          </svg>
          Goodreads
        </h2>
        <a
          class="css-1hh4m8m"
          href="https://www.goodreads.com/mockusername"
          title="mockusername on Goodreads"
        >
          Visit Profile
          <span
            class="read-more-icon"
          >
            →
          </span>
        </a>
      </div>
    </header>
    <div
      data-testid="recently-read-books"
    >
      0 books
    </div>
    <div
      data-testid="user-status"
    >
      No status
    </div>
  </section>
</DocumentFragment>
`;

exports[`Goodreads Widget renders with data and AI summary 1`] = `
<DocumentFragment>
  <section
    class="css-1pk2a5b"
    id="goodreads"
  >
    <header
      class="css-zvwfan"
    >
      <div
        class="css-x7xacr"
      >
        <h2
          class="css-16f4ihe"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-goodreads css-1f4q58s"
            data-icon="goodreads"
            data-prefix="fab"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M299.9 191.2c5.1 37.3-4.7 79-35.9 100.7-22.3 15.5-52.8 14.1-70.8 5.7-37.1-17.3-49.5-58.6-46.8-97.2 4.3-60.9 40.9-87.9 75.3-87.5 46.9-.2 71.8 31.8 78.2 78.3zM448 88l0 336c0 30.9-25.1 56-56 56L56 480c-30.9 0-56-25.1-56-56L0 88C0 57.1 25.1 32 56 32l336 0c30.9 0 56 25.1 56 56zM330 313.2s-.1-34-.1-217.3l-29 0 0 40.3c-.8 .3-1.2-.5-1.6-1.2-9.6-20.7-35.9-46.3-76-46-51.9 .4-87.2 31.2-100.6 77.8-4.3 14.9-5.8 30.1-5.5 45.6 1.7 77.9 45.1 117.8 112.4 115.2 28.9-1.1 54.5-17 69-45.2 .5-1 1.1-1.9 1.7-2.9 .2 .1 .4 .1 .6 .2 .3 3.8 .2 30.7 .1 34.5-.2 14.8-2 29.5-7.2 43.5-7.8 21-22.3 34.7-44.5 39.5-17.8 3.9-35.6 3.8-53.2-1.2-21.5-6.1-36.5-19-41.1-41.8-.3-1.6-1.3-1.3-2.3-1.3l-26.8 0c.8 10.6 3.2 20.3 8.5 29.2 24.2 40.5 82.7 48.5 128.2 37.4 49.9-12.3 67.3-54.9 67.4-106.3z"
              fill="currentColor"
            />
          </svg>
          Goodreads
        </h2>
        <a
          class="css-1hh4m8m"
          href="https://www.goodreads.com/mockusername"
          title="mockusername on Goodreads"
        >
          Visit Profile
          <span
            class="read-more-icon"
          >
            →
          </span>
        </a>
      </div>
      <div
        class="css-iydney"
      >
        <div
          class="css-6ad07s"
        >
          <div
            class="css-1njnxko"
          >
            150 Friends
          </div>
          <div
            class="css-137c6l"
          >
            42 Books Read
          </div>
        </div>
      </div>
    </header>
    <div
      data-testid="recently-read-books"
    >
      1 books
    </div>
    <div
      data-testid="user-status"
    >
      Test User: Currently reading a great book!
    </div>
    <div
      data-testid="ai-summary"
    >
      Test AI summary content
    </div>
  </section>
</DocumentFragment>
`;

exports[`Goodreads Widget renders without AI summary when not available 1`] = `
<DocumentFragment>
  <section
    class="css-1pk2a5b"
    id="goodreads"
  >
    <header
      class="css-f8y2ki"
    >
      <div
        class="css-x7xacr"
      >
        <h2
          class="css-16f4ihe"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-goodreads css-1f4q58s"
            data-icon="goodreads"
            data-prefix="fab"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M299.9 191.2c5.1 37.3-4.7 79-35.9 100.7-22.3 15.5-52.8 14.1-70.8 5.7-37.1-17.3-49.5-58.6-46.8-97.2 4.3-60.9 40.9-87.9 75.3-87.5 46.9-.2 71.8 31.8 78.2 78.3zM448 88l0 336c0 30.9-25.1 56-56 56L56 480c-30.9 0-56-25.1-56-56L0 88C0 57.1 25.1 32 56 32l336 0c30.9 0 56 25.1 56 56zM330 313.2s-.1-34-.1-217.3l-29 0 0 40.3c-.8 .3-1.2-.5-1.6-1.2-9.6-20.7-35.9-46.3-76-46-51.9 .4-87.2 31.2-100.6 77.8-4.3 14.9-5.8 30.1-5.5 45.6 1.7 77.9 45.1 117.8 112.4 115.2 28.9-1.1 54.5-17 69-45.2 .5-1 1.1-1.9 1.7-2.9 .2 .1 .4 .1 .6 .2 .3 3.8 .2 30.7 .1 34.5-.2 14.8-2 29.5-7.2 43.5-7.8 21-22.3 34.7-44.5 39.5-17.8 3.9-35.6 3.8-53.2-1.2-21.5-6.1-36.5-19-41.1-41.8-.3-1.6-1.3-1.3-2.3-1.3l-26.8 0c.8 10.6 3.2 20.3 8.5 29.2 24.2 40.5 82.7 48.5 128.2 37.4 49.9-12.3 67.3-54.9 67.4-106.3z"
              fill="currentColor"
            />
          </svg>
          Goodreads
        </h2>
        <a
          class="css-1hh4m8m"
          href="https://www.goodreads.com/mockusername"
          title="mockusername on Goodreads"
        >
          Visit Profile
          <span
            class="read-more-icon"
          >
            →
          </span>
        </a>
      </div>
    </header>
    <div
      data-testid="recently-read-books"
    >
      0 books
    </div>
    <div
      data-testid="user-status"
    >
      No status
    </div>
  </section>
</DocumentFragment>
`;
